force-app/main/default/objects/CPQ2_ContractPrice__c/CPQ2_ContractPrice__c.object-meta.xml
<CustomObject>
    <label>Core List Price</label>
    <nameField>
        <displayFormat>CP-{0000000000}</displayFormat>
        <label>Core List Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Core List Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>