force-app/main/default/objects/CPQ2_ContractPrice__c/fields/CPQ2_Account__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Account__c</fullName>
    <formula>CPQ2_Contract__r.AccountId</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>