force-app/main/default/objects/CPQ2_ContractPrice__c/fields/CPQ2_Active__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>