force-app/main/default/objects/CPQ2_ContractPrice__c/fields/CPQ2_Contract__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Core List Prices</relationshipLabel>
    <relationshipName>Core_List_Prices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>