force-app/main/default/objects/CPQ2_ContractPrice__c/fields/CPQ2_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>