force-app/main/default/objects/CPQ2_ContractPrice__c/fields/CPQ2_Price__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Price__c</fullName>
    <description>Core list price $ amount</description>
    <label>Core Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>