force-app/main/default/objects/CPQ2_ContractPrice__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <formula>CPQ2_Product__r.Description</formula>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>